# GaussianMaster

./: Readme.txt  pyproject.toml
gaussianmaster/: __init__.py  main.py
gaussianmaster/core/: extractor.py
